--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
           <img decoding="async" src="imgs/gallery-06.png" alt="" />
         </div>
       </div>
-      <p class="copyright">Made With &lt;3 By Elzero</p>
+      <p class="copyright">Made With &lt;3 Amna By Elzero web school</p>
     </footer>
     <!-- End Footer -->
   </body>
