--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elzero</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/elzero.css" />
@@ -907,7 +907,7 @@
           <img decoding="async" src="imgs/gallery-06.png" alt="" />
         </div>
       </div>
-      <p class="copyright">Made With &lt;3 Amna By Elzero web school</p>
+      <p class="copyright">Made With &lt;3 By Elzero</p>
     </footer>
     <!-- End Footer -->
   </body>
