--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elzero</title>
+    <title>Amna</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/elzero.css" />
     <!-- Font Awesome -->
@@ -19,7 +19,7 @@
     <!-- start header -->
     <header id="header">
       <div class="container">
-        <a href="#landing">Elzero</a>
+        <a href="#landing">Amna</a>
         <ul class="main-nav">
           <li><a href="#articles">articles</a></li>
           <li><a href="#gallery">gallery</a></li>
@@ -76,7 +76,7 @@
     <section class="landing flex">
       <div class="container">
         <div class="text">
-          <h1>Welcome, To Elzero World</h1>
+          <h1>Welcome, To Amna World</h1>
           <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
         </div>
         <div class="image">
@@ -850,7 +850,7 @@
     <footer>
       <div class="container">
         <div class="box">
-          <h3>Elzero</h3>
+          <h3>Amna</h3>
           <ul class="social">
             <li>
               <a href="#" class="facebook">
@@ -907,7 +907,7 @@
           <img decoding="async" src="imgs/gallery-06.png" alt="" />
         </div>
       </div>
-      <p class="copyright">Made With &lt;3 By Elzero</p>
+      <p class="copyright">Made With &lt;3 By Amna</p>
     </footer>
     <!-- End Footer -->
   </body>
